samples/_failures_safe/1761219715_145e6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42e05a22.c: In function ‘main’:
./samples/SAFE/__tmp_42e05a22.c:178:5: error: expected expression at end of input
  178 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_42e05a22.c:178:5: error: expected declaration or statement at end of input
